--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title> (주) 주흥환경 </title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
+  
+<link rel="shortcut icon" href="./img/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
+  <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
@@ -62,17 +67,17 @@
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="greet.html">고농도폐수처리설비</a></li>
-              <li><a class="nav-sub-text" href="history.html">위탁운영관리</a></li>
-              <li><a class="nav-sub-text" href="certi.html">수질/악취측정대행</a></li>
-              <li><a class="nav-sub-text" href="location.html">환경컨설팅 및 인허가</a></li>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
             </ul>
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="greet.html">수처리공사</a></li>
-              <li><a class="nav-sub-text" href="history.html">시운전</a></li>
-              <li><a class="nav-sub-text" href="certi.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
@@ -84,6 +89,12 @@
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -98,21 +109,21 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('img/main-water.jpg')">
+        <div class="carousel-item active" style="background-image: url('img/spring-276014.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>First Slide</h3>
             <p>This is a description for the first slide.</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('img/green-690315.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Second Slide</h3>
             <p>This is a description for the second slide.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('img/nature-3289812.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Third Slide</h3>
             <p>This is a description for the third slide.</p>
@@ -132,48 +143,45 @@
 
   <!-- Page Content -->
   <div class="container">
-  
-    <h1 class="my-5 text-center">주흥환경 슬로건</h1>
-  
     <!-- Portfolio Section -->
     <h2 class="mb-4 text-center">Business</h2>
     <div class="mb-5 row">
       <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="business1.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card h-100" onclick="location.href='business1.html';">
+          <div class="card-img" style="background-image: url('img/splashing-165192.jpg')"></div>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business1.html">고농도폐수처리설비</a>
+              <a href="business1.html">폐수처리설비</a>
             </h4>
-            <p class="card-text">고농도폐수처리설비 사업에 대한 설명입니다.</p>
+            <p class="card-text">가축분뇨처리시설, 산업폐수처리시설, 하수처리시설, 오수, 분뇨처리시설, 정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card h-100" onclick="location.href='business2.html';">
+          <div class="card-img" style="background-image: url('img/handshake-3298455.jpg')"></div>
           <div class="card-body">
             <h4 class="card-title">
               <a href="business2.html">위탁운영관리</a>
             </h4>
-            <p class="card-text">위탁운영관리 사업에 대한 설명입니다.</p>
+            <p class="card-text">개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card h-100" onclick="location.href='business3.html';">
+          <div class="card-img" style="background-image: url('img/lab-217041.jpg')"></div>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business3.html">수질/악취측정대행</a>
+              <a href="business3.html">측정대행</a>
             </h4>
-            <p class="card-text">수질/악취측정대행 사업에 대한 설명입니다.</p>
+            <p class="card-text">악취분석, 수질분석, 생태독성 등의 측정대행용역 사업분야입니다.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card h-100" onclick="location.href='business4.html';">
+          <div class="card-img" style="background-image: url('img/office-1209640.jpg')"></div>
           <div class="card-body">
             <h4 class="card-title">
               <a href="business4.html">환경컨설팅 및 인허가</a>
