--- a/business1.html
+++ b/business1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
 
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,48 +19,76 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
+  <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
               회사소개 </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="greet.html">인사말</a>
-              <a class="dropdown-item" href="history.html">회사연혁</a>
-              <a class="dropdown-item" href="certi.html">인증현황</a>
-              <a class="dropdown-item" href="#">찾아오시는 길</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업소개</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업실적</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
           </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -69,18 +97,22 @@
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">사업소개</h1>
+    <div class="top-area mb-4" style="background-image: url(img/architecture-1853632.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Business Info</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
     </div>
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
-        <a href="greet.html" class="side-menu text-center">사업소개</a>
+        <a href="business1.html" class="side-menu text-center">사업소개</a>
         <div class="list-group">
-          <a href="greet.html" class="list-group-item">고농도폐수처리설비</a>
-          <a href="history.html" class="list-group-item">위탁운영관리</a>
-          <a href="certi.html" class="list-group-item">수질/악취측정대행</a>
-          <a href="location.html" class="list-group-item">환경컨설팅 및 인허가</a>
+          <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
+          <a href="business2.html" class="list-group-item">위탁운영관리</a>
+          <a href="business3.html" class="list-group-item">측정대행</a>
+          <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
         </div>
       </div>
   
@@ -88,29 +120,74 @@
       <div class="container">
   
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">고농도폐수처리설비
-          <small>Subheading</small>
-        </h1>
-  
+        <div class="title-bar">
+        <h1>폐수처리설비</h1>
+
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="../index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
-          <li class="breadcrumb-item"><a href="./business1.html">고농도폐수처리설비</a></li>
+          <li class="breadcrumb-item"><a href="./business1.html">폐수처리설비</a></li>
         </ol>
-  
-        <p>Most of Start Bootstrap's unstyled templates can be directly integrated into the Modern Business template. You
-          can view all of our unstyled templates on our website at
-          <a
-            href="https://startbootstrap.com/template-categories/unstyled">https://startbootstrap.com/template-categories/unstyled</a>.
-        </p>
-  
+        </div>
+        
+        <div class="business-intro" >
+          가축분뇨처리시설, 산업폐수처리시설, 하수처리시설, 오수, 분뇨처리시설, 정수처리시설 등의 설계 및 시공 사업분야입니다.
+       </div>
+       <div class="business-content">
+        <h2 class="tit">
+          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser)
+        </h2>
+        <h3 class="sub-tit">
+          VMBD 공법
+        </h3>
+        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 폭기액을 순환시키며 직접 공기를 
+          접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
+        <h3 class="sub-tit">
+          VMBD 공법의 원리
+        </h3>
+        <img class="my-4" src="img/VMBD2-1.png" width=100%>
+        <img src="img/VMBD1.png" width=90%>
+
+        <h3 class="sub-tit">
+          기존 폭기시스템과의 비교
+        </h3>
+        <div class="row list">
+          <dl>
+            <dt>산소용해도</dt>
+            <dd>25% ~ 35% <br> (기존 방식의 3~5배)</dd>
+          </dl>
+          <dl>
+            <dt>소요부지면적</dt>
+            <dd>기존 폭기조의 <br>5~10배 감소</dd>
+          </dl>
+          <dl>
+            <dt>유지관리</dt>
+            <dd>자동 청소, 반영구적 수명</dd>
+          </dl>
+          <dl>
+            <dt>처리효율</dt>
+            <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
+          </dl>
+
+
+        </div>
+        <h3 class="sub-tit">
+          처리공정
+        </h3>
+        <h4>고농도 유기물 제거 공정도</h4>
+        <img src="img/공정도1.png" width=100%>
+        <h4>고농도 T-N 제거 공정도</h4>
+        <img src="img/공정도2.png" width=100%>
+        <h4>순환식 산화 탈취시스템 공정도</h4>
+        <img src="img/공정도3.png" width=100%>
+      </div>
       </div>
       <!-- /.container -->
     </div>
   </div>
-
+  
   <!-- Footer -->
   <footer class="py-4 bg-dark">
     <div class="container">
@@ -122,7 +199,7 @@
         </ul>
       </div>
       <div class="m-0 text-center">
-        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경  대표자 : 이길재
+        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경 대표자 : 이길재
           <br>
           주 소 : 경기도 화성시 병점동로 164번길 39, 201호
         </p>
@@ -133,11 +210,11 @@
   
   </footer>
 
-
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
