--- a/business2.html
+++ b/business2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
 
@@ -8,86 +8,144 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/modern-business.css" rel="stylesheet">
+  <link href="css/modern-business.css" rel="stylesheet">
 
 </head>
 
 <body>
+  <!-- Navigation(공통) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
+              회사소개 </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업소개</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업실적</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- Wrap -->
+  <div class="wrap">
+    <!-- top img -->
+    <div class="top-area mb-4" style="background-image: url(img/architecture-1853632.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Business Info</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
+    </div>
+    <div class="row main-content">
+      <!-- Sidebar Column -->
+      <div class="col-lg-2 mb-4">
+        <a href="business1.html" class="side-menu text-center">사업소개</a>
+        <div class="list-group">
+          <a href="business1.html" class="list-group-item">폐수처리설비</a>
+          <a href="business2.html" class="list-group-item"><strong>위탁운영관리</strong></a>
+          <a href="business3.html" class="list-group-item">측정대행</a>
+          <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
+        </div>
+      </div>
+  
+      <!-- Page Content -->
+      <div class="container">
+  
+        <!-- Page Heading/Breadcrumbs -->
+        <div class="title-bar">
+        <h1>위탁운영관리</h1>
 
- <!-- Navigation -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="logo.png" width=250px></a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="about/greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            회사소개 </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="about/greet.html">인사말</a>
-            <a class="dropdown-item" href="about/history.html">회사연혁</a>
-            <a class="dropdown-item" href="about/certi.html">인증현황</a>
-            <a class="dropdown-item" href="about/location.html">찾아오시는 길</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="business/business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업소개</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="business/business1.html">고농도폐수처리설비</a>
-            <a class="dropdown-item" href="business/business2.html">위탁운영관리</a>
-            <a class="dropdown-item" href="business/business3.html">수질/악취측정대행</a>
-            <a class="dropdown-item" href="business/business4.html">환경컨설팅 및 인허가</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업실적</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-            <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-            <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">고객센터</a>
-        </li>
-      </ul>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
+          <li class="breadcrumb-item"><a href="./business2.html">위탁운영관리</a></li>
+        </ol>
+        </div>
+        
+        <div class="business-intro" >
+          개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.
+       </div>
+       <div class="business-content">
+        <h3 class="sub-tit">
+          관리용역 업무 처리
+        </h3>
+        <img src="img/bus2-1.png" width=100%>
+      </div>
+      </div>
+      <!-- /.container -->
     </div>
   </div>
-</nav>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">위탁운영관리
-      <small>Subheading</small>
-    </h1>
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="../index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
-      <li class="breadcrumb-item"><a href="./business2.html">위탁운영관리</a></li>
-    </ol>
-
-    <p>Most of Start Bootstrap's unstyled templates can be directly integrated into the Modern Business template. You can view all of our unstyled templates on our website at
-      <a href="https://startbootstrap.com/template-categories/unstyled">https://startbootstrap.com/template-categories/unstyled</a>.</p>
-
-  </div>
-  <!-- /.container -->
-
+  
   <!-- Footer -->
   <footer class="py-4 bg-dark">
     <div class="container">
@@ -99,7 +157,7 @@
         </ul>
       </div>
       <div class="m-0 text-center">
-        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경  대표자 : 이길재
+        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경 대표자 : 이길재
           <br>
           주 소 : 경기도 화성시 병점동로 164번길 39, 201호
         </p>
@@ -114,6 +172,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
