--- a/business3.html
+++ b/business3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
 
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,75 +19,177 @@
 </head>
 
 <body>
+  <!-- Navigation(공통) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
+              회사소개 </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업소개</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업실적</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- Wrap -->
+  <div class="wrap">
+    <!-- top img -->
+    <div class="top-area mb-4" style="background-image: url(img/architecture-1853632.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Business Info</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
+    </div>
+    <div class="row main-content">
+      <!-- Sidebar Column -->
+      <div class="col-lg-2 mb-4">
+        <a href="business1.html" class="side-menu text-center">사업소개</a>
+        <div class="list-group">
+          <a href="business1.html" class="list-group-item">폐수처리설비</a>
+          <a href="business2.html" class="list-group-item">위탁운영관리</a>
+          <a href="business3.html" class="list-group-item"><strong>측정대행</strong></a>
+          <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
+        </div>
+      </div>
+  
+      <!-- Page Content -->
+      <div class="container">
+  
+        <!-- Page Heading/Breadcrumbs -->
+        <div class="title-bar">
+        <h1>측정대행</h1>
 
- <!-- Navigation -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="logo.png" width=250px></a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="about/greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            회사소개 </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="about/greet.html">인사말</a>
-            <a class="dropdown-item" href="about/history.html">회사연혁</a>
-            <a class="dropdown-item" href="about/certi.html">인증현황</a>
-            <a class="dropdown-item" href="about/location.html">찾아오시는 길</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="business/business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업소개</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="business/business1.html">고농도폐수처리설비</a>
-            <a class="dropdown-item" href="business/business2.html">위탁운영관리</a>
-            <a class="dropdown-item" href="business/business3.html">수질/악취측정대행</a>
-            <a class="dropdown-item" href="business/business4.html">환경컨설팅 및 인허가</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업실적</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-            <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-            <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">고객센터</a>
-        </li>
-      </ul>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
+          <li class="breadcrumb-item"><a href="./business2.html">위탁운영관리</a></li>
+        </ol>
+        </div>
+        <div class="business-intro" >
+          악취분석, 수질분석, 생태독성 등의 측정대행용역 사업분야입니다.
+       </div>
+        <div class="sub-menu-btn col3">
+          <a href="business3.html"><div class="active"><p>악취분석</p></div></a>
+          <a href="business3-1.html"><div><p>수질분석</p></div></a>
+          <a href="business3-2.html"><div><p>생태독성</p></div></a>
+        </div>
+
+       <div class="business-content">
+        <h3 class="sub-tit">
+          악취분석 개요
+        </h3>
+        <p class="bg-grey">사업활동 등으로 인하여 발생하는 악취를 방지함으로써 국민이 건강하고 쾌적한 환경에서 생활 할 수 있도록 한다.</p>
+        <h3 class="sub-tit">악취 측정/분석 방법
+
+        </h3>
+        <p>1. 지정악취물질 분석 : 지정 악취 물질 22종을 분석하기 위한 <strong>기기분석법</strong>을 이용</p>
+        <p>2. 복합악취물질 측정: <strong>공기희석관능법</strong>에 따라 사람의 후각을 이용하여 직접 냄새를 측정</p>
+        <table class="normal-tb">
+          <thead>
+            <tr>
+              <th>구분</th>
+              <th>기기분석법</th>
+              <th>공기희석관능법</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>특징</td>
+              <td>물질에 따라 연속적인 측정이 가능<br>장시간 시료채취에 의한 평균농도 측정에 유리</td>
+              <td>연속측정이 어려움<br>순간적인 최대농도 측정에 유리</td>
+            </tr>
+            <tr>
+              <td>평가</td>
+              <td>특징적인 물질이 있으면 배출원의 추정, 수색 가능</td>
+              <td>냄새의 정도에 대한 평가<br>복합적인 측정 가능</td>
+            </tr>
+          </tbody>
+          </table>
+          <h3 class="sub-tit">
+          측정분석 절차
+          </h3>
+          <div id="bus3">
+          <ul class="circle-list">
+            <li>측정분석<br>문의 및 상담</li>
+            <li>견적서 발송 및 접수</li>
+            <li>측정 일시 협의</li>
+            <li>업체 방문 후<br>측정 및 시료 채취</li>
+            <li>시료분석</li>
+            <li>시험성적서 발급</li>
+          </ul>
+        </div>
+      </div>
+      </div>
+      <!-- /.container -->
     </div>
   </div>
-</nav>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">수질/악취측정대행
-      <small>Subheading</small>
-    </h1>
-
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item"><a href="business1.html">사업소개</a></li>
-      <li class="breadcrumb-item"><a href="business3.html">수질/악취측정대행</a></li>
-    </ol>
-    <p>Most of Start Bootstrap's unstyled templates can be directly integrated into the Modern Business template. You can view all of our unstyled templates on our website at
-      <a href="https://startbootstrap.com/template-categories/unstyled">https://startbootstrap.com/template-categories/unstyled</a>.</p>
-
-  </div>
-  <!-- /.container -->
-
+  
   <!-- Footer -->
   <footer class="py-4 bg-dark">
     <div class="container">
@@ -99,7 +201,7 @@
         </ul>
       </div>
       <div class="m-0 text-center">
-        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경  대표자 : 이길재
+        <p> 사업자번호: 135-81-29393 상호명 : 주식회사 주흥환경 대표자 : 이길재
           <br>
           주 소 : 경기도 화성시 병점동로 164번길 39, 201호
         </p>
@@ -114,6 +216,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
