--- a/certi.html
+++ b/certi.html
@@ -16,60 +16,92 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
 </head>
-
 <body>
- <!-- Navigation -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            회사소개 </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="greet.html">인사말</a>
-            <a class="dropdown-item" href="history.html">회사연혁</a>
-            <a class="dropdown-item" href="certi.html">인증현황</a>
-            <a class="dropdown-item" href="#">찾아오시는 길</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업소개</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-            <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-            <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-            <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업실적</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-            <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-            <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">고객센터</a>
-        </li>
-      </ul>
+  <!-- Navigation(공통) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
+              회사소개 </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업소개</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업실적</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">회사소개</h1>
-    </div> 
+    <div class="top-area mb-4" style="background-image: url(img/buildings-984195.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Company Info</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
+    </div>
 
     <div class="row main-content">
       <!-- Sidebar Column -->
@@ -78,23 +110,26 @@
         <div class="list-group">
           <a href="greet.html" class="list-group-item">인사말</a>
           <a href="history.html" class="list-group-item">회사연혁</a>
-          <a href="certi.html" class="list-group-item">인증현황</a>
+          <a href="certi.html" class="list-group-item"><strong>인증현황</strong></a>
           <a href="location.html" class="list-group-item">찾아오시는 길</a>
         </div>
-      </div>
+      </div>  
     <!-- Page Content -->
-    <div class="col-lg-9 mb-4  container">
-
+    <div class="container">
       <!-- Page Heading/Breadcrumbs -->
-      <h1 id="sub-menu">인증현황</h1>
 
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item"><a href="greet.html">회사소개</a></li>
-        <li class="breadcrumb-item"><a href="certi.html">인증현황</a></li>
-      </ol>
+      <div class="title-bar">
+        <h1>인증현황</h1>
+
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item"><a href="./greet.html">회사소개</a></li>
+          <li class="breadcrumb-item"><a href="./certi.html">인증현황</a></li>
+        </ol>
+      </div>
+
       <!-- Certification List -->
       <div class="row">
         <div class="col-lg-3 col-sm-6 mb-4">
@@ -112,7 +147,7 @@
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
           <img class="img-fluid" src="certification/가축분뇨관련영업허가증/page-1.jpg" alt="">
-          <div class="certi-name">가축분뇨관련영업허가증</div>
+          <div class="certi-name">가축분뇨관련 영업허가증</div>
         </div>
         </div>
         <div class="col-lg-3 col-sm-6 mb-4">
@@ -136,13 +171,79 @@
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
           <img class="img-fluid" src="certification/경기도유망환경기업지정서/page-1.jpg" alt="">
-          <div class="certi-name">경기도유망환경기업지정서</div>
+          <div class="certi-name">경기도 유망환경기업 지정서</div>
         </div>
         </div>
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
           <img class="img-fluid" src="certification/기술혁신형 중소기업(Inno-Biz) 확인서/page-1.jpg" alt="">
           <div class="certi-name">기술혁신형 중소기업(Inno-Biz) 확인서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/기업부설연구소 인정서/page-1.jpg" alt="">
+          <div class="certi-name">기업부설연구소 인정서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/벤처기업확인서/page-1.jpg" alt="">
+          <div class="certi-name">벤처기업 확인서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/상하수도설비공사업/page-1.jpg" alt="">
+          <div class="certi-name">상하수도설비공사업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/소기업확인서(2020.04.01~2021.03.31)/page-1.jpg" alt="">
+          <div class="certi-name">소기업확인서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질 측정대행업(전체)/page-1.jpg" alt="">
+          <div class="certi-name">수질 측정대행업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질 환경전문공사업등록증/page-1.jpg" alt="">
+          <div class="certi-name">수질 환경전문공사업 등록증</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질환경관리대행기관지정서/page-1.jpg" alt="">
+          <div class="certi-name">수질환경관리 대행기관 지정서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/악취-측정대행업-전체/악취-측정대행업-1.jpg" alt="">
+          <div class="certi-name">악취 측정대행업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/연구개발서비스업신고증.jpg" alt="">
+          <div class="certi-name">연구개발 서비스업 신고증</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/해외건설업-신고확인증-전문건설업_상하수도설비공사업_.jpg/866705a7240d42f6cb146372c4ff7d02aaWBUFjb1Oh9eYBg-0.jpg" alt="">
+          <div class="certi-name">해외건설업-전문건설업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/해외건설업-신고확인증-환경전문공사업.jpg/e4ebb15b55644eedf1f2896a910cf01fVL2esG2gY1ySQZJC-0.jpg" alt="">
+          <div class="certi-name">해외건설업-환경전문공사업</div>
         </div>
         </div>
       </div>
@@ -162,8 +263,42 @@
                 <img class="img-fluid" src="certification2/상표등록증 - 제11류 하수용 정화설비등 20건-1.jpg" alt="">
                 <div class="certi-name">하수용 정화설비</div>
               </div>
-
-              
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/상표등록증(하수용 정화설비등 20건 HiDOV)-1.jpg" alt="">
+                <div class="certi-name">하수용 정화설비</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="">
+                <div class="certi-name">수처리장치</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="">
+                <div class="certi-name">산소용해장치</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 수직 멀티 베인형 싸이클론 장치 및 이를 포함하는 세정탑 시스템-1.jpg" alt="">
+                <div class="certi-name">세정탑 시스템</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 스컴 및 부유물질 제거장치 및 스컴 및 부유물질 제거방법-1.jpg" alt="">
+                <div class="certi-name">부유물질 제거장치</div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 플로우형 스컴 및 부유물질 제거장치, 플로우트형 스컴 및 부유물질 처리장치 및 이를 이용한 저수지의 수질 정화시스템-1.jpg" alt="">
+                <div class="certi-name">저수지 수질 정화시스템</div>
+                </div>
               </div>
               
               </div>
@@ -202,7 +337,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
