--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,46 +20,69 @@
 
 <body>
 
-  <!-- Navigation -->
+  <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
               회사소개 </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="greet.html">인사말</a>
-              <a class="dropdown-item" href="history.html">회사연혁</a>
-              <a class="dropdown-item" href="certi.html">인증현황</a>
-              <a class="dropdown-item" href="#">찾아오시는 길</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업소개</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업실적</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -69,8 +92,12 @@
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">고객센터</h1>
+    <div class="top-area mb-4" style="background-image: url(img/scott-graham-OQMZwNd3ThU-unsplash.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Customer Center</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
     </div>
   
     <div class="row main-content">
@@ -98,34 +125,60 @@
   
        <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <div class="row">
-      <div class="col-lg-8 mb-4">
+    <div class="contact-content">
+      <div class="mb-4">
         <h3>문의사항 등록</h3>
+        <div class="personal-box">
+        <div class="personal-content">
+          <h4>개인정보 수집 및 이용에 대한 동의사항</h4> <br>
+          <h5>1. 개인정보의 수집 및 이용목적</h5>
+          <p>  ① 귀사는 고객문의, 고객불만접수 등 다양한 인터넷 서비스를 제공하기 위하여 적법하고 공정한 수단에 의하여 회원님의 개인정보를 수집하고 있습니다.
+            <br>② 고객님의 기본적 인권 침해의 우려가 있는 민감한 개인정보는 수집하지 않습니다.</p> <br>
+          <h5> 2. 개인정보의 수집 항목</h5>
+            <p>① 회사는 회원가입, 원활한 고객상담, 각종 서비스의 제공을 위해 최초 회원가입 당시 아래와 같은 개인정보를 수집하고 있습니다.
+            <br>&nbsp;&nbsp;- 성명, 전화번호, 이메일 주소
+            <br>② 서비스 이용과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.
+            <br>&nbsp;&nbsp;- IP Address, 쿠키, 방문 일시, 접속경로, 서비스 이용 기록, 불량 이용 기록</p> <br>
+          <h5>3. 개인정보의 보유기간</h5>
+           <p>① 귀사는 회원님의 개인정보를 수집하는 경우 그 보유기간은 상담완료시까지 입니다.
+            <br>② 하지만, 해지 시 법령의 규정에 의하여 거래 관련 권리의무관계의 확인 등을 이유로 일정기간 보유해야 할 필요가 있을 경우에는 관련법령이 정한 기간 또는 아래에서 정한 기간 동안 회원님의 거래정보를 보유할 수 있습니다.
+            <br>&nbsp;&nbsp; 1. 계약 철회 등에 관한 기록 : 5년
+            <br>&nbsp;&nbsp; 2. 회원의 불만 또는 분쟁처리에 관한 기록 : 5년
+            </p>
+        </div>
+      </div>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group form-group">
+            <div class="controls text-center mt-3">
+              <input type="radio" name="personal" id="personal" value="personal" required data-validation-required-message="개인정보취급방침에 동의해주세요.">
+              <label>개인정보취급방침을 읽었으며 이에 동의합니다.</label>
+              <p class="help-block"></p>
+            </div>
+          </div>
+          <div class="control-group form-group">
             <div class="controls">
-              <label>제목:</label>
+              <label>제목 :</label>
               <input type="text" class="form-control" id="phone" required data-validation-required-message="제목을 입력해주세요.">
               <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>작성자:</label>
-              <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+              <label>작성자 :</label>
+              <input type="text" class="form-control" id="name" required data-validation-required-message="작성자를 입력해주세요.">
               <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>이메일:</label>
-              <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+              <label>이메일 :</label>
+              <input type="email" class="form-control" id="email" required data-validation-required-message="이메일 주소를 입력해주세요.">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>내용:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+              <label>내용 :</label>
+              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="문의 내용을 입력해주세요." maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
           <div id="success"></div>
@@ -175,7 +228,8 @@
   <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
-
+  
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
