--- a/history.html
+++ b/history.html
@@ -18,58 +18,91 @@
 </head>
 
 <body>
- <!-- Navigation -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            회사소개 </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="greet.html">인사말</a>
-            <a class="dropdown-item" href="history.html">회사연혁</a>
-            <a class="dropdown-item" href="certi.html">인증현황</a>
-            <a class="dropdown-item" href="#">찾아오시는 길</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업소개</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-            <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-            <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-            <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            사업실적</a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-            <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-            <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-            <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">고객센터</a>
-        </li>
-      </ul>
+  <!-- Navigation(공통) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
+              회사소개 </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업소개</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
+              사업실적</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">회사소개</h1>
-    </div> 
+    <div class="top-area mb-4" style="background-image: url(img/buildings-984195.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Company Info</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
+    </div>
 
     <div class="row main-content">
       <!-- Sidebar Column -->
@@ -77,25 +110,26 @@
         <a href="greet.html" class="side-menu text-center">회사소개</a>
         <div class="list-group">
           <a href="greet.html" class="list-group-item">인사말</a>
-          <a href="history.html" class="list-group-item">회사연혁</a>
+          <a href="history.html" class="list-group-item"><strong>회사연혁</strong></a>
           <a href="certi.html" class="list-group-item">인증현황</a>
           <a href="location.html" class="list-group-item">찾아오시는 길</a>
         </div>
+      </div>  
+    <!-- Page Content -->
+    <div class="container">
+      <!-- Page Heading/Breadcrumbs -->
+
+      <div class="title-bar">
+        <h1>회사연혁</h1>
+
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item"><a href="./greet.html">회사소개</a></li>
+          <li class="breadcrumb-item"><a href="./history.html">회사연혁</a></li>
+        </ol>
       </div>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 id="sub-menu">회사연혁</h1>
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item"><a href="greet.html">회사소개</a></li>
-      <li class="breadcrumb-item"><a href="history.html">회사연혁</a></li>
-    </ol>
     
       <!-- History Content -->
       <div id="history" class="mb-4 pb-4">
@@ -180,7 +214,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
