--- a/work2.html
+++ b/work2.html
@@ -19,155 +19,409 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
+  <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
               회사소개 </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="greet.html">인사말</a>
-              <a class="dropdown-item" href="history.html">회사연혁</a>
-              <a class="dropdown-item" href="certi.html">인증현황</a>
-              <a class="dropdown-item" href="#">찾아오시는 길</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업소개</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업실적</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
           </li>
         </ul>
       </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  
+
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">사업실적</h1>
+    <div class="top-area mb-4" style="background-image: url(img/environmental-protection-326923.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Work List</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
     </div>
+
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
         <a href="work1.html" class="side-menu text-center">사업실적</a>
         <div class="list-group">
           <a href="work1.html" class="list-group-item">수처리공사</a>
-          <a href="work2.html" class="list-group-item">위탁운영관리</a>
-          <a href="work3.html" class="list-group-item">수질모니터링</a>
-          <a href="work4.html" class="list-group-item">시운전</a>
-          <a href="work5.html" class="list-group-item">기술개발</a>
+          <a href="work2.html" class="list-group-item"><strong>시운전</strong></a>
+          <a href="work3.html" class="list-group-item">기술개발</a>
         </div>
-      </div>
-  
-      <!-- Page Content -->
-      <div class="container">
-  
-        <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">위탁운영관리
-          <small>Subheading</small>
-        </h1>
-  
+      </div>  
+    <!-- Page Content -->
+    <div class="container">
+      <!-- Page Heading/Breadcrumbs -->
+
+      <div class="title-bar">
+        <h1>시운전 실적</h1>
+
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item"><a href="work1.html">사업실적</a></li>
-          <li class="breadcrumb-item"><a href="work2.html">위탁운영관리</a></li>
+          <li class="breadcrumb-item"><a href="./work1.html">사업실적</a></li>
+          <li class="breadcrumb-item"><a href="./work2.html">시운전</a></li>
         </ol>
-        
+      </div>
+
         <div class="work-list">
           <table class="work-tb">
             <thead>
               <tr>
                 <th>기간</th>
-                <th>공&nbsp;&nbsp;&nbsp;사&nbsp;&nbsp;&nbsp;명</th>
-                <th>공&nbsp;&nbsp;법</th>
-                <th>처리용량 (㎥/d)</th>
-                <th>발주처/계약</th>
+                <th>발주처</th>
+                <th>계약명</th>
+                <th>공법</th>
+                <th>처리용량(㎥/d)</th>
                 <th>비고</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>2014.09.01~운영중</td>
-                <td>경남고성 숭의축산 폐수처리시설 운영관리</td>
-                <td>MBDR</td>
-                <td>60</td>
-                <td>숭의축산</td>
+                <td>2010.04~2010.09</td>
+                <td>한국수력원자력/대치이알텍</td>
+                <td>서천 장항하수처리시설 종합시운전</td>
+                <td>2A2O(SBR)</td>
+                <td>4,000</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2018.01.01 ~ 2019.12.31</td>
-                <td>2018년~2019년 폐수처리장 운영 관리 용역</td>
-                <td>생물화학적 분리막 처리방법</td>
-                <td>550</td>
-                <td>구리농수산물 공사</td>
+                <td>2012.10.26~2013.03.31</td>
+                <td>한국개발㈜</td>
+                <td>청송공공하수처리시설 건설사업 시설공사 중 종합시운전</td>
+                <td>2A2O(SBR)</td>
+                <td>1,600</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2014.01.01 ~ 2016.02.29</td>
-                <td>김포 하수처리장 위탁운영</td>
+                <td>2013.06~2013.09</td>
+                <td>㈜에이치앤텍</td>
+                <td>서산 화천지구 소규모 마을하수도공사 시운전</td>
                 <td>SBR</td>
-                <td>410</td>
-                <td>김포시</td>
+                <td>230</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2015.01.01 ~ 2015.12.31</td>
-                <td>평택항 하수처리시설 위탁운영</td>
+                <td>2013.06~2013.09</td>
+                <td>㈜에이치앤텍</td>
+                <td>청양군 청소지구 마을하수도 시운전</td>
+                <td>SBR</td>
+                <td>60</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2013.09.30~2013.11.20</td>
+                <td>대림환경㈜</td>
+                <td>대명 홍천 소노펠리체CC장비고 오수처리시설 시운전</td>
                 <td>MBR</td>
-                <td>1,800</td>
-                <td>평택항만공사</td>
+                <td>1,200</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2017.01.01 ~ 2017.12.31</td>
-                <td>영월정수장 고도정수처리시설 운영관리</td>
+                <td>2013.11.20~2014.03.19</td>
+                <td>코웨이㈜</td>
+                <td>삼척마평 시운전</td>
+                <td>NF</td>
+                <td>20,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2013.11.04~2014.02.03</td>
+                <td>㈜에이치앤텍</td>
+                <td>여주 간매 공공하수처리시설 설치공사 시운전</td>
+                <td>CF-SBR</td>
+                <td>270</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2013</td>
+                <td>효림산업</td>
+                <td>Qurayyah Independent power project</td>
+                <td>HBC</td>
+                <td>오수-24 약품폐수 4,800 오일폐수 2,400</td>
+                <td>사우디</td>
+              </tr>
+              <tr>
+                <td>2013-2014</td>
+                <td>효림산업(현대건설)</td>
+                <td>Borouge3 U&amp;O Project</td>
+                <td>Cpitdgf+현수미생물+ self washing filtert+a/filter</td>
+                <td>오일폐수 - 7,200</td>
+                <td>아랍에미레이트</td>
+              </tr>
+              <tr>
+                <td>2014</td>
+                <td>료림산업(현대건설/현대엔지니어링)</td>
+                <td>알칼리지 파워플랜트현장 폐수처리시설시운전</td>
+                <td>API+DAF+SandFilert</td>
+                <td>오일폐수 - 1,680</td>
+                <td>리비아</td>
+              </tr>
+              <tr>
+                <td>2014.02.18~2014.04.20</td>
+                <td>대림환경㈜</td>
+                <td>대명리조트 거제지점 개인하수처리시설 시운전</td>
+                <td>A2O</td>
+                <td>1500</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014(3개월)</td>
+                <td>청진건설㈜</td>
+                <td>반구공공하수처리시설 시운전</td>
+                <td>IC-SBR</td>
+                <td>70</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014.06.17~2015.05.10</td>
+                <td>동진건설㈜</td>
+                <td>평은공공하수처리시설 시운전</td>
+                <td>IC-SBR</td>
+                <td>80</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014.05.20~2014.09.26</td>
+                <td>코웨이㈜</td>
+                <td>포항하수 재이용 종합시운전</td>
+                <td>한외여과막+역삼투막</td>
+                <td>100,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014.01.20~2014.07.19</td>
+                <td>㈜조은환경</td>
+                <td>색달 공공하수처리시설 시운전</td>
+                <td>Denipo</td>
+                <td>25,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014.10.15~2015.02.14</td>
+                <td>한일환경건설</td>
+                <td>상주시 낙동공공하수처리시설 시운전</td>
+                <td>H-SBR+총인시설(S-DAF)</td>
+                <td>700</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2014.11.10~2015.02.09</td>
+                <td>한일 ENG</td>
+                <td>마전공공하수처리시설 시운전</td>
+                <td>KSBNR</td>
+                <td>230</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2015.05.15~2015.08.15</td>
+                <td>투원퓨어텍(주)</td>
+                <td>봉성리 농어촌마을하수도 정공사 종합시운전</td>
+                <td>DMR</td>
+                <td>110</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2015.08.01~2016.03.31</td>
+                <td>(주)에이치앤텍</td>
+                <td>당진순성, 면천 공공하수처리시설 종합 시운전</td>
+                <td>SBR</td>
+                <td>순성 -700, 면천-220</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.02.22~2016.09.30</td>
+                <td>(주)그린니스</td>
+                <td>부산 하수슬러지 육상처리시설 폐수처리 시설개선공사 시운전</td>
+                <td>MBD</td>
+                <td>550</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.04.01~2016.06.30</td>
+                <td>코웨이엔텍(주)</td>
+                <td>포천 장자산단 공업용수공급시설 종합시운전</td>
+                <td>RO</td>
+                <td>20,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.04.01~2016.08.05</td>
+                <td>학림건설(주)</td>
+                <td>성전 공공하수처리시설 설치사업(4차분) 중 시운전</td>
+                <td>KSMBR</td>
+                <td>600</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.07.11~2016.10.10</td>
+                <td>대림환경주식회사</td>
+                <td>삼척대명리조트 개인하수처리시설 시운전</td>
+                <td>MBR</td>
+                <td>2,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.05.02</td>
+                <td>(주)바이오엔텍</td>
+                <td>상주시 은척면 봉중리 마을하수처리시설</td>
+                <td>BIO-BEAD</td>
+                <td>140</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2016.09.05~2016.12.05</td>
+                <td>코웨이엔텍(주)</td>
+                <td>영월정수장 고도정수처리시설 종합시운전</td>
                 <td>NF</td>
                 <td>8,000</td>
-                <td>코웨이엔텍</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2019.02.01 ~ 운영중</td>
-                <td>별내/의정부 류게소 오수처리시설 위탁운영</td>
-                <td>MBR</td>
-                <td>각 400</td>
-                <td>㈜풀무원 푸드앤컬처</td>
+                <td>2016.10.28~2017.05.31</td>
+                <td>한라오엠에스(주)</td>
+                <td>상주 청리 일반산업단지 폐수처리시설 시운전</td>
+                <td>SBF</td>
+                <td>500</td>
                 <td></td>
               </tr>
               <tr>
-                <td>2020.01.01 ~ 운영중</td>
-                <td>영산(창원방향) 휴게소 오수처리시설 위탁운영</td>
-                <td>A2O</td>
-                <td>150</td>
-                <td>풀무원식품㈜</td>
+                <td>2016-12.05~2017.10.31</td>
+                <td>학림건설(주)</td>
+                <td>광주광역시 제1하수처리장 에너지자립화 사업 중 종합시운전</td>
+                <td>표준활성슬러지법</td>
+                <td>600,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2017.02.20~2018.10.10</td>
+                <td>한라오엠에스(주)</td>
+                <td>인천 검단일반산업단지 폐수종말처리시설 설치사업(1-2단계) 종합시운전</td>
+                <td>KSBNR</td>
+                <td>9,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2017.05.24~2017.11.23</td>
+                <td>한동건설(주)</td>
+                <td>성산공공하수처리시설 증설공사 중 종합시운전</td>
+                <td>ICEAS</td>
+                <td>6,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2017.04.17~2017.10.16</td>
+                <td>한라오엠에스(주)</td>
+                <td>포천 용정일반산업단지 폐수종말처리시설 설치사업 종합시운전</td>
+                <td>KSBNR</td>
+                <td>2,300</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2017.04.24~2019.04.23</td>
+                <td>(주)그린기술</td>
+                <td>태백시 공공하수고도처리시설 설치사업(토목,기계) 중 종합시운전</td>
+                <td>Denipo</td>
+                <td>30,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2017.07.03~2018.08.19</td>
+                <td>(주)삼우건설</td>
+                <td>용주가호 농어촌마을하수도 정비사업 중 종합시운전</td>
+                <td>H-SBR</td>
+                <td>660</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2019.04.20~2019.08.19</td>
+                <td>동신건설㈜</td>
+                <td>증산 옥동 농어촌 마을하수도 시운전</td>
+                <td>SBR</td>
+                <td>60</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2020.01.02~2020.05.01</td>
+                <td>코오롱글로벌㈜</td>
+                <td>행정중심복합도시 수질복원센터 및 크린에너지센터 A-2,3,4 건설공사 중 종합시운전(A-3)</td>
+                <td>I3-system</td>
+                <td>10,000</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>2020.07.06~2020.12.31</td>
+                <td>코오롱글로벌㈜</td>
+                <td>행정중심복합도시 수질복원센터 A-3 건설공사 중 유지관리용역</td>
+                <td>I3-system</td>
+                <td>10,000</td>
                 <td></td>
               </tr>
             </tbody>
@@ -205,7 +459,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
