--- a/work3.html
+++ b/work3.html
@@ -19,127 +19,195 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
+  <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
               회사소개 </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="greet.html">인사말</a>
-              <a class="dropdown-item" href="history.html">회사연혁</a>
-              <a class="dropdown-item" href="certi.html">인증현황</a>
-              <a class="dropdown-item" href="#">찾아오시는 길</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업소개</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업실적</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
           </li>
         </ul>
       </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list  container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="work1.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+          <li class="nav-sub0 last">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  
+
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
-    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">사업실적</h1>
+    <div class="top-area mb-4" style="background-image: url(img/environmental-protection-326923.jpg);">
+      <div class="top-area-cover"></div>
+      <div class="top-text">
+        <h1>Work List</h1>
+        <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
+      </div>
     </div>
+
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
         <a href="work1.html" class="side-menu text-center">사업실적</a>
         <div class="list-group">
           <a href="work1.html" class="list-group-item">수처리공사</a>
-          <a href="work2.html" class="list-group-item">위탁운영관리</a>
-          <a href="work3.html" class="list-group-item">수질모니터링</a>
-          <a href="work4.html" class="list-group-item">시운전</a>
-          <a href="work5.html" class="list-group-item">기술개발</a>
+          <a href="work2.html" class="list-group-item">시운전</a>
+          <a href="work3.html" class="list-group-item"><strong>기술개발</strong></a>
         </div>
-      </div>
-  
-      <!-- Page Content -->
-      <div class="container">
-  
-        <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">수질모니터링
-          <small>Subheading</small>
-        </h1>
-  
+      </div>  
+    <!-- Page Content -->
+    <div class="container">
+      <!-- Page Heading/Breadcrumbs -->
+
+      <div class="title-bar">
+        <h1>기술개발 실적</h1>
+
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item"><a href="work1.html">사업실적</a></li>
-          <li class="breadcrumb-item"><a href="work3.html">수질모니터링</a></li>
+          <li class="breadcrumb-item"><a href="./work1.html">사업실적</a></li>
+          <li class="breadcrumb-item"><a href="./work3.html">기술개발</a></li>
         </ol>
-        
+      </div>
         <div class="work-list">
+          <h4 class="mt-5 mb-3 w4">국가 프로젝트 수행실적</h4>
           <table class="work-tb">
             <thead>
               <tr>
-                <th class="work-tb-cm">연도</th>
-                <th class="work-tb-cm">공사명</th>
-                <th class="work-tb-cm">공법</th>
-                <th class="work-tb-cm">처리용량 (㎥/d)</th>
-                <th class="work-tb-cm">발주자</th>
+                <th>순번</th>
+                <th>지원기관</th>
+                <th>과제명</th>
+                <th>기간</th>
+                <th>연구비</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td class="work-tb-cm" rowspan="4">2020년</td>
-                <td class="work-tb-lm">남해 수제맥주 폐수처리시설 개선공사</td>
-                <td class="work-tb-cm">MBDR을 이용한 활성슬러지공법</td>
-                <td class="work-tb-cm">9</td>
-                <td class="work-tb-cm">㈜완벽한인생</td>
+                <td>1</td>
+                <td>중소기업청</td>
+                <td>미세기포와 분리막 내장된 배양조를 이용한 호소수의 조류제거 기술</td>
+                <td>2012.06 ~ 2013.05</td>
+                <td>1억원</td>
               </tr>
               <tr>
-                <td class="work-tb-lm">홍대CGV복합몰 신축사업 공사중 정화조설치공사</td>
-                <td class="work-tb-cm">부패탱크방식</td>
-                <td class="work-tb-cm">1400인조 300인조</td>
-                <td class="work-tb-cm">활림건설㈜</td>
+                <td>2</td>
+                <td>중소기업청</td>
+                <td>침지식 평막 프레임 국산화 및 고효율 질소제거 수처리 장치</td>
+                <td>2013.12 ~ 2014.12</td>
+                <td>2억 5천만원</td>
               </tr>
               <tr>
-                <td class="work-tb-lm">다올팜㈜ 축산폐수처리시설 기계설비공사</td>
-                <td class="work-tb-cm">물리화학적처리+MBDR을 이용한 탈질소&nbsp;&nbsp;활성슬러지공법</td>
-                <td class="work-tb-cm">40</td>
-                <td class="work-tb-cm">㈜삼건환경건설</td>
+                <td>3</td>
+                <td>경기과학 기술원</td>
+                <td>여과/흡척/소독이 동시에 가능한 인 제거장치</td>
+                <td>2014.09 ~ 2015.10</td>
+                <td>1억</td>
               </tr>
               <tr>
-                <td class="work-tb-lm">금산군 가축분뇨 공공처리시설 설치 사업중 기계공사</td>
-                <td class="work-tb-cm">중온 혐기성소화</td>
-                <td class="work-tb-cm">90</td>
-                <td class="work-tb-cm">환경시설관리 주식회사 외2</td>
+                <td>4</td>
+                <td>KEITI</td>
+                <td>가축분뇨 색도 및 유기물 제거를 위한 배오존 부상분리와 무포기 오존화시스템 실증화</td>
+                <td>2016.05 ~ 2018.12</td>
+                <td>6억 2천 7백만원</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>중소기업청</td>
+                <td>슬러지접촉분리형 이질산화-이탈질 공정을 이용한 생물학적 하폐수 고도처리</td>
+                <td>2017.06 ~ 2018.05</td>
+                <td>1.33억원</td>
               </tr>
             </tbody>
-          </table>
+            </table>
+            <h4 class="mt-5 mb-3 w4">자체 연구개발 수행실적</h4>
+            <table class="work-tb mb-5">
+              <thead>
+                <tr>
+                  <th>순번</th>
+                  <th>공동 <br>연구기관</th>
+                  <th>과제명</th>
+                  <th>기간</th>
+                  <th>연구비</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>용인대학교<br>환경공학과</td>
+                  <td>인 제거를 위한 전해응집 장치 개발</td>
+                  <td>2010.05 ~ 2011.03</td>
+                  <td>5천만원</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>경희대학교<br>환경공학과</td>
+                  <td>마이크로 버블을 이용한 호소수의 조류제거 기술개발</td>
+                  <td>20111.05 ~ 2012.02</td>
+                  <td>5천만원</td>
+                </tr>
+              </tbody>
+              </table>
         </div>
   
       </div>
@@ -173,7 +241,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
