add content, design

--- a/business1.html
+++ b/business1.html
@@ -16,6 +16,9 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -133,23 +136,19 @@
         </div>
         
         <div class="business-intro" >
-          가축분뇨처리시설, 산업폐수처리시설, 하수처리시설, 오수, 분뇨처리시설, 정수처리시설 등의 설계 및 시공 사업분야입니다.
+          <p>가축분뇨/산업폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
        </div>
        <div class="business-content">
-        <h2 class="tit">
-          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser)
-        </h2>
         <h3 class="sub-tit">
-          VMBD 공법
+          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
         </h3>
         <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 폭기액을 순환시키며 직접 공기를 
           접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
         <h3 class="sub-tit">
           VMBD 공법의 원리
         </h3>
-        <img class="my-4" src="img/VMBD2-1.png" width=100%>
         <img src="img/VMBD1.png" width=90%>
-
+        <img class="my-4" src="img/VMBD2-1.png" width=90%>
         <h3 class="sub-tit">
           기존 폭기시스템과의 비교
         </h3>
