--- a/business2.html
+++ b/business2.html
@@ -16,6 +16,9 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -133,7 +136,7 @@
         </div>
         
         <div class="business-intro" >
-          개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.
+          <p>개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.</p>
        </div>
        <div class="business-content">
         <h3 class="sub-tit">
