--- a/business3.html
+++ b/business3.html
@@ -16,6 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -132,7 +134,7 @@
         </ol>
         </div>
         <div class="business-intro" >
-          악취분석, 수질분석, 생태독성 등의 측정대행용역 사업분야입니다.
+          <p>악취분석, 수질분석, 생태독성 등의 측정대행용역 사업분야입니다.</p>
        </div>
         <div class="sub-menu-btn col3">
           <a href="business3.html"><div class="active"><p>악취분석</p></div></a>
