--- a/business4.html
+++ b/business4.html
@@ -16,6 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -131,7 +133,9 @@
           <li class="breadcrumb-item"><a href="./business2.html">환경컨설팅 및 인허가</a></li>
         </ol>
         </div>
-        
+        <div class="business-intro" >
+          <p>국가과제, 산학공동연구 등의 연구개발과 환경설비의 개선/관리 사업분야 입니다.</p>
+       </div>
        <div class="business-content">
         <h3 class="sub-tit">
           환경컨설팅
@@ -154,139 +158,9 @@
         </div>
 
         <h3 class="sub-tit">
-          연구원 현황
+          연구개발 수행 현황
         </h3>
-        <table class="normal-tb">
-          <thead>
-            <tr>
-              <th>구분</th>
-              <th>번호</th>
-              <th>직위</th>
-              <th>성명</th>
-              <th>생년월일</th>
-              <th>성별</th>
-              <th>내/외국인</th>
-              <th>소속부서</th>
-              <th>최종학교<br>(전공학과)</th>
-              <th>최종학위<br>(학위등록번호)</th>
-              <th>병적사항</th>
-              <th>발령일</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td rowspan="2">기업부설연구기관장</td>
-              <td rowspan="2">1</td>
-              <td rowspan="2">연구소장</td>
-              <td rowspan="2">최영근</td>
-              <td rowspan="2">1972-09-15</td>
-              <td rowspan="2">남</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">-</td>
-              <td>연세대</td>
-              <td>박사</td>
-              <td rowspan="2">병역필</td>
-              <td rowspan="2">2015-04-20</td>
-            </tr>
-            <tr>
-              <td>환경공학</td>
-              <td>대학원(박)8304</td>
-            </tr>
-            <tr>
-              <td rowspan="2">전담요원</td>
-              <td rowspan="2">2</td>
-              <td rowspan="2">연구원</td>
-              <td rowspan="2">최민기</td>
-              <td rowspan="2">1976-06-07</td>
-              <td rowspan="2">남</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">연구소</td>
-              <td>선문대</td>
-              <td>학사</td>
-              <td rowspan="2">병역필</td>
-              <td rowspan="2">2010-03-16</td>
-            </tr>
-            <tr>
-              <td>환경공학</td>
-              <td>선문대2001(학)346</td>
-            </tr>
-            <tr>
-              <td rowspan="2">전담요원</td>
-              <td rowspan="2">3</td>
-              <td rowspan="2">연구원</td>
-              <td rowspan="2">정미나</td>
-              <td rowspan="2">1983-07-05</td>
-              <td rowspan="2">여</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">연구소</td>
-              <td>충주대</td>
-              <td>학사</td>
-              <td rowspan="2">해당 없음</td>
-              <td rowspan="2">2017-05-10</td>
-            </tr>
-            <tr>
-              <td>환경공학과</td>
-              <td>충주대2005(학)0677</td>
-            </tr>
-            <tr>
-              <td rowspan="2">전담요원</td>
-              <td rowspan="2">4</td>
-              <td rowspan="2">연구원</td>
-              <td rowspan="2">진혜정</td>
-              <td rowspan="2">1981-02-10</td>
-              <td rowspan="2">여</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">연구소</td>
-              <td>창원대</td>
-              <td>학사</td>
-              <td rowspan="2">해당 없음</td>
-              <td rowspan="2">2018-05-08</td>
-            </tr>
-            <tr>
-              <td>환경공학과</td>
-              <td>창원대2003(학)1802</td>
-            </tr>
-            <tr>
-              <td rowspan="2">전담요원</td>
-              <td rowspan="2">5</td>
-              <td rowspan="2">연구원</td>
-              <td rowspan="2">이미경</td>
-              <td rowspan="2">1966-09-03</td>
-              <td rowspan="2">여</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">연구소</td>
-              <td>단국대</td>
-              <td>학사</td>
-              <td rowspan="2">해당 없음</td>
-              <td rowspan="2">2018-05-08</td>
-            </tr>
-            <tr>
-              <td>과학교육과</td>
-              <td>86(나)46896</td>
-            </tr>
-            <tr>
-              <td rowspan="2">보조원</td>
-              <td rowspan="2">6</td>
-              <td rowspan="2">연구보조원</td>
-              <td rowspan="2">김기홍</td>
-              <td rowspan="2">1983-02-22</td>
-              <td rowspan="2">남</td>
-              <td rowspan="2">내국인</td>
-              <td rowspan="2">연구소</td>
-              <td>동남보건대</td>
-              <td>전문</td>
-              <td rowspan="2">병역필</td>
-              <td rowspan="2">2015-04-20</td>
-            </tr>
-            <tr>
-              <td>환경생명과학과</td>
-              <td>동남-2007-0563</td>
-            </tr>
-          </tbody>
-          </table>
-          <h3 class="sub-tit">
-            수행실적
-          </h3>
+        <img src="img/연구소.png" width=80%>
       </div>
       <!-- ./business-content -->
       </div>
