--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
   <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -62,7 +61,7 @@
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
               <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
               <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
@@ -86,9 +85,15 @@
           </li>
         </ul>
       </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  
+
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
@@ -183,7 +188,7 @@
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">문의 보내기</button>
+          <button type="submit" class="btn btn-outline-success" id="sendMessageButton">문의 보내기</button>
         </form>
       </div>
 
