--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h4 class="card-title">
               <a href="business4.html">환경컨설팅 및 인허가</a>
             </h4>
-            <p class="card-text">환경컨설팅 및 인허가 사업에 대한 설명입니다.</p>
+            <p class="card-text">국가과제, 산학공동연구 등의 연구개발과 환경설비의 개선/관리 사업분야 입니다.</p>
           </div>
         </div>
       </div>
