--- a/work2.html
+++ b/work2.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> (주) 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
               <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
               <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
