--- a/location.html
+++ b/location.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title> 주흥환경 </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
               <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
               <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
@@ -136,11 +136,10 @@
           <!-- Map Column -->
           <div class="col-lg-8 mb-4">
             <!-- Embedded Google Map -->
-            <iframe style="width: 100%; height: 400px; border: 0;"
-              src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.346261219916!2d127.0373992156555!3d37.21575425189614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b43f5fd913827%3A0xf3b8a2cbb493d89f!2z6rK96riw64-EIO2ZlOyEseyLnCDsp4TslYjrj5kg67OR7KCQ64-Z66GcMTY067KI6ri4IDM5!5e0!3m2!1sko!2skr!4v1598867030109!5m2!1sko!2skr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
           <!-- Contact Details Column -->
-          <div class="col-lg-4 mb-4">
+          <div class="col-lg-3 mb-4">
             <h3>상세정보</h3>
             <p>
               경기도 화성시 병점동로 
