all contents added before meeting(09.01)

--- a/business1.html
+++ b/business1.html
@@ -169,9 +169,11 @@
             <dt>처리효율</dt>
             <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
           </dl>
-
-
         </div>
+        <h3 class="sub-tit">
+          VMBD 설치 사례
+        </h3>
+        <img class="my-4" src="img/VMBD실제.JPG" width=70%>
         <h3 class="sub-tit">
           처리공정
         </h3>
