--- a/business3-1.html
+++ b/business3-1.html
@@ -16,9 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
-
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -148,7 +147,43 @@
           수질분석 개요
         </h3>
         <p class="bg-grey">수질오염으로 인한 국민건강 및 환경에 관한 위해를 예방하고 하천/호소 등 공공수역의 수질 및 수생태계를 적정하게 관리,보전함을 목적으로 한다.</p>
-        
+        <h3 class="sub-tit">
+          수질분석 적용대상
+        </h3>
+        <p class="bg-grey">1. 수질 및 수생태계 보전에 관한 법률 제2조 11항에 따른 폐수배출시설<br>
+        2. 1항의 시설은 수질 및 수생태계 보전에 관한 법률 제46조(오염물질의 측정)에 의거 측정할 수 있다.</p>
+        <table class="normal-tb">
+          <thead>
+            <tr>
+              <th>종류</th>
+              <th>배출규모</th>
+              <th>측정횟수</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1종 사업장</td>
+              <td>2000m3 이상/day</td>
+              <td rowspan="5">권고 규정으로 측정 주기 및 <br>횟수를 특정하지 않음</td>
+            </tr>
+            <tr>
+              <td>2종 사업장</td>
+              <td>700~2000m3 미만/day</td>
+            </tr>
+            <tr>
+              <td>3종 사업장</td>
+              <td>200~700m3 미만/day</td>
+            </tr>
+            <tr>
+              <td>4종 사업장</td>
+              <td>50~200m3 미만/day</td>
+            </tr>
+            <tr>
+              <td>5종 사업장</td>
+              <td>1~4종에 해당되지 아니하는배출시설</td>
+            </tr>
+          </tbody>
+          </table>
       </div>
       </div>
       <!-- /.container -->
