--- a/business3-2.html
+++ b/business3-2.html
@@ -18,7 +18,7 @@
 
 
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -145,9 +145,18 @@
 
        <div class="business-content">
         <h3 class="sub-tit">
-          생태독성 개요
+          생태독성 관리제도 개요
         </h3>
         <p class="bg-grey">생태적으로 건강한 하천과 유해물질로부터 안전한 물환경 조성을 목적으로 한다.</p>
+        <h3 class="sub-tit">
+          생태독성 관리제도 적용대상
+        </h3>
+        <p class="bg-grey">
+          1. 수질 및 수생태계 보전에 관한 법률 48조 1항에 따른 폐수종말처리시설
+          <br>2. 하수도법 제2조 9호에 따른 공공하수처리시설
+          <br>3. 수질 및 수생태계 보전에 관한 법률 제2조 11하에 따른 폐수배출시설
+        </p>
+        
         <h3 class="sub-tit">
           생태독성 업무 절차
         </h3>
