--- a/business4.html
+++ b/business4.html
@@ -17,7 +17,7 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
