--- a/business3.html
+++ b/business3.html
@@ -15,9 +15,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+  
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Audiowide&display=swap" rel="stylesheet">
 </head>
 
 <body>
