--- a/contact.html
+++ b/contact.html
@@ -108,9 +108,9 @@
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
-        <a href="greet.html" class="side-menu text-center">고객센터</a>
+        <a href="contact.html" class="side-menu text-center">고객센터</a>
         <div class="list-group">
-          <a href="greet.html" class="list-group-item">상담문의</a>
+          <a href="contact.html" class="list-group-item">상담문의</a>
 
         </div>
       </div>
