--- a/history.html
+++ b/history.html
@@ -178,6 +178,103 @@
                 <span class="history-content">수질측정대행업 (화성시청 제2019-5호)
                 </span>
               </div>
+              <div class="history-event">
+                <span class="history-month">03</span>
+                <span class="history-content">환경관리대행기관 (경기도청 제22호)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2010</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">07</span>
+                <span class="history-content">기업부설연구소
+                </span>
+              </div>
+              <div class="history-event">
+                <span class="history-month">11</span>
+                <span class="history-content">악취측정대행업 (화성시청 제2019-4호)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2011</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">07</span>
+                <span class="history-content">ISO 9001/14001 
+                </span>
+              </div>
+              <div class="history-event">
+                <span class="history-month">12</span>
+                <span class="history-content">상하수도설비공사업 (용인 2011-11-09)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2012</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">09</span>
+                <span class="history-content">기술혁신 중소기업 확인서 (제120604-01729호)
+                </span>
+              </div>
+              <div class="history-event">
+                <span class="history-month">10</span>
+                <span class="history-content">벤처기업확인서 (제20120108314호)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2013</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">02</span>
+                <span class="history-content">개인하수처리시설 설계시공업 (경기화성 제2018-1호)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2014</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">02</span>
+                <span class="history-content">가축분뇨시설관리업(화성 허가 제2017-1호)
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2016</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">06</span>
+                <span class="history-content">대표자 변경
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="history-list">
+          <div class="row"><span class="history-year mr-6">2017</span>
+            <div class="history-events">
+              <div class="history-event">
+                <span class="history-month">11</span>
+                <span class="history-content">주소이전 (경기도 용인시 → 경기도 화성시)
+                </span>
+              </div>
             </div>
           </div>
         </div>
